kubernetes/pihole/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
spec:
  selector:
    matchLabels:
      app: pihole
  serviceName: pihole
  replicas: 3
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole@sha256:6c872c3f8f1954423dbd1c7db661719b447e7b890e231489ada2a6a2904342ff
          lifecycle:
            postStart:
              exec:
                command: ["sh", "-c", 'sleep 10 && echo "" | pihole setpassword && pihole --config misc.etc_dnsmasq_d=true'] # disable password and enable dnsmasq for wildcard dns
          ports:
            - name: svc-80-tcp-web
              containerPort: 80
              protocol: TCP
            - name: svc-53-udp-dns
              containerPort: 53
              protocol: UDP
            - name: svc-53-tcp-dns
              containerPort: 53
              protocol: TCP
          # TODO: fix probes; works on 2022.12.01 image; fails with 403 in pihole v6
          # https://www.reddit.com/r/pihole/comments/1ivj7q0/dns_stopped_working_entirely_after_v6_upgrade/
          # livenessProbe:
          #   httpGet:
          #     port: svc-80-tcp-web
          #   initialDelaySeconds: 30
          #   periodSeconds: 5
          # readinessProbe:
          #   httpGet:
          #     port: svc-80-tcp-web
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   failureThreshold: 10
          volumeMounts:
            - name: pihole-etc-pihole
              mountPath: /etc/pihole
            - name: pihole-etc-dnsmasq
              mountPath: /etc/dnsmasq.d
            - name: pihole-config-volume
              mountPath: /etc/dnsmasq.d/02-my-wildcard-dns.conf
              subPath: 02-my-wildcard-dns.conf
      volumes:
        - name: pihole-config-volume
          configMap:
            name: pihole-wildcard-configmap
  volumeClaimTemplates:
    - metadata:
        name: pihole-etc-pihole
        namespace: pihole
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 3Gi
    - metadata:
        name: pihole-etc-dnsmasq
        namespace: pihole
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 3Gi
