kubernetes/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.homelab.jenniferpweir.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-web-svc
            port:
              number: 80
